--- a/src/main/resources/assets/styles/widgets/shortcuts.less
+++ b/src/main/resources/assets/styles/widgets/shortcuts.less
@@ -16,7 +16,7 @@
 
   .widget-shortcuts-item {
     text-align: center;
-    min-width: 75px;
+    min-width: 25%;
     margin: 15px 8px;
     cursor: pointer;
     font-size: 13px;
@@ -43,11 +43,5 @@
         opacity: 0.7;
       }
     }
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .widget-shortcuts-container {
-    justify-content: space-evenly;
   }
 }
